--- a/templates/index.html
+++ b/templates/index.html
@@ -2,103 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="static/favicon.ico">
+    <link rel="shortcut icon" href="/static/img/favicon.ico">
+    <link rel="stylesheet" href="/static/css/bootstrap.css">
     <title>Home page</title>
-
-        <style>
-            body{
-                background-color: #f2f2f2;
-                font-family: Calibri;
-                margin: 0;
-                padding: 0;
-                border: 0;
-                overflow: hidden;
-            }
-
-            .topnav {
-              background-color: black;
-                overflow: hidden;
-            }
-
-            .topnav a {
-              float: left;
-              color: #f2f2f2;
-              text-align: center;
-              padding: 14px 16px;
-              text-decoration: none;
-              font-size: 17px;
-            }
-
-            .topnav a:hover {
-              background-color: #f7e6e7;
-              color: black;
-            }
-
-            .topnav a.active {
-              background-color: #d92935;
-              color: white;
-            }
-
-            footer {
-                text-align: center;
-                padding: 1px;
-                border-bottom: 1px;
-                background-color: #d92935;
-                color: white;
-                width: 100%;
-                height: 70px;
-                bottom: 0;
-                position: absolute;
-
-            }
-
-            a:link {
-                text-decoration: none;
-                color: white;
-            }
-
-            a:visited {
-              text-decoration: none;
-                color: white;
-            }
-
-            a:hover {
-              text-decoration: underline;
-                color: white;
-            }
-
-            a:active {
-              text-decoration: underline;
-                color: white;
-            }
-
-            .main {
-                margin-left: 15px;
-                margin-right: 15px;
-            }
-
-        </style>
 </head>
 <body>
+<header>
+<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">
+            <img src="/static/img/favicon.ico" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="text-white nav-link active" aria-current="page" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="text-white nav-link" href="/aboutme">About me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="text-white nav-link" href="/gallery">Gallery</a>
+                </li>
+                <li class="nav-item">
+                    <a class="text-white nav-link" href="/contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+</header>
+<main>
+<div class="container-fluid mt-3">
+    <div class="card text-dark bg-light mb-3">
+        <div class="card-body">
+            <h5 class="card-title">Hello on my website!</h5>
+            <p class="card-text">This is my new website for exercises. I will be using python, flask, html, CSS, bootstrap and azure.</p>
+        </div>
+    </div>
 
-<div class="topnav">
-  <a class="active" href="/">Home</a>
-  <a href="/aboutme">About me</a>
-    <a href="/gallery">Gallery</a>
-    <a href="/contact">Contact</a>
+    <footer class="bg-dark text-center text-lg-start fixed-bottom">
+        <!-- Copyright -->
+        <div class="text-center p-3 text-white">
+            © 2021 Copyright:
+            <a class="text-white" href="https://kasjan.azurewebsites.net/">Kasjan Różycki</a>
+        </div>
+        <!-- Copyright -->
+    </footer>
 </div>
-
-<div class="main">
-<h1>Hello on my website!</h1>
-<h4>Please see other sub-pages.</h4>
-
-</div>
-
-
-<footer>
-  <p>Author: Kasjan R.<br>
-  <a href="mailto:email@address.com">email@address.com</a></p>
-</footer>
-
+</main>
 </body>
 </html>
