--- a/templates/index.html
+++ b/templates/index.html
@@ -45,8 +45,7 @@
         <div class="card text-dark bg-light mb-3">
             <div class="card-body">
                 <h5 class="card-title">Hello on my website!</h5>
-                <p class="card-text">This is my new website for exercises. I will be using python, flask, html, CSS,
-                    bootstrap and azure.</p>
+                <p class="card-text">This is my new website for exercises. I will be using python, flask, flask-dance, html, CSS, bootstrap and azure.</p>
 
                     <a href="/git-login" class="btn btn-dark" role="button" aria-pressed="true">Login with GitHub account</a>
 
